--- a/less/main-content.less
+++ b/less/main-content.less
@@ -177,9 +177,11 @@
 				width: 100%;
 				padding: 1rem;
 			}
-			@media @mobile {width: 100%;}
+
 			@media @tablet {width: 100%;}
 			@media @tablet {padding: 8rem 0rem;}
+			@media @mobile {width: 100%;}
+			@media @mobile {padding: 0;}
 
 			p {
 				@media @mobile {
@@ -200,8 +202,8 @@
 
 			.card img {
 				width: 35%;
-				@media @mobile {width: 100%;}
 				@media @tablet {width: 30%;}
+				@media @mobile {width: 100%;}
 			}
 		}
 
